--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -3,8 +3,7 @@
   "builds": [
     {
       "src": "main.py",
-      "use": "@vercel/python",
-      "config": { "maxLambdaSize": "50mb" }
+      "use": "@vercel/python"
     }
   ],
   "routes": [
@@ -14,6 +13,6 @@
     }
   ],
   "env": {
-    "PYTHONUNBUFFERED": "1"
+    "START_COMMAND": "gunicorn -w 4 -k uvicorn.workers.UvicornWorker main:app"
   }
 }
