--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -11,5 +11,8 @@
       "src": "/(.*)",
       "dest": "main.py"
     }
-  ]
+  ],
+  "env": {
+    "START_COMMAND": "uvicorn main:app --host 0.0.0.0 --port 8000"
+  }
 }
